[gd_scene load_steps=6 format=3 uid="uid://d4buxj1x4un48"]

[ext_resource type="Script" uid="uid://bptvsejqq44o5" path="res://scripts/main_menu.gd" id="1_nl8w3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_70654"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nl8w3"]
bg_color = Color(0.713726, 0.713726, 0.713726, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.196078, 0.196078, 0.196078, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rkf3"]
bg_color = Color(0.494118, 0.494118, 0.494118, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.196078, 0.196078, 0.196078, 0.6)
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_247la"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.196078, 0.196078, 0.196078, 0.6)
shadow_size = 5
shadow_offset = Vector2(0, 3)

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nl8w3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -142.5
offset_right = 200.0
offset_bottom = 142.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_70654")
theme_override_styles/hover = SubResource("StyleBoxFlat_nl8w3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3rkf3")
theme_override_styles/normal = SubResource("StyleBoxFlat_247la")
text = "Play"

[node name="Settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_70654")
theme_override_styles/hover = SubResource("StyleBoxFlat_nl8w3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3rkf3")
theme_override_styles/normal = SubResource("StyleBoxFlat_247la")
text = "Settings"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_70654")
theme_override_styles/hover = SubResource("StyleBoxFlat_nl8w3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3rkf3")
theme_override_styles/normal = SubResource("StyleBoxFlat_247la")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -139.0
offset_top = 62.0
offset_right = 144.0
offset_bottom = 129.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 37
text = "Пиздатая игра!"
vertical_alignment = 1

[connection signal="pressed" from="Panel/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
