[gd_scene load_steps=3 format=3 uid="uid://m71ahvkoq46n"]

[ext_resource type="Script" uid="uid://b2r0b02fhi1ug" path="res://scripts/main_menu.gd" id="1_fe2o3"]
[ext_resource type="Texture2D" uid="uid://bpfwefef3shr2" path="res://assets/gradient_pixel_art_style_sgzvbqi6m3wekqz4kdj6_2.png" id="2_1g8jr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fe2o3")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -124.0
offset_right = 16.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1g8jr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VersionLable" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "version 0.0.0"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TitleLable" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 12
theme_override_font_sizes/font_size = 45
text = "Туда сюда игра!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="AboutButton" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "About"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Exit"
